--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^2.15.1
   cloud_firestore: ^4.9.1
   get: ^4.6.5
+  shared_preferences: ^2.2.1
 
 dev_dependencies:
   flutter_test:
