--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   cloud_firestore: ^4.9.1
   get: ^4.6.5
   shared_preferences: ^2.2.1
+  image_picker: ^1.0.4
+  firebase_storage: ^11.2.6
+  marquee: ^2.2.3
 
 dev_dependencies:
   flutter_test:
