--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   image_picker: ^1.0.4
   firebase_storage: ^11.2.6
   marquee: ^2.2.3
+  google_maps_flutter: ^2.5.0
+  permission_handler: ^10.4.5
+  geolocator: ^10.0.1
+  location: ^5.0.3
 
 dev_dependencies:
   flutter_test:
