--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   permission_handler: ^10.4.5
   geolocator: ^10.0.1
   location: ^5.0.3
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
